<resources>
    <string name="app_name">foodApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes Fragment</string>
    <string name="favourite_recipes">Favourite</string>
    <string name="food_joke">Food Joke</string>
    <string name="recipes">Recipes</string>
    <string name="todo">TODO</string>
    <string name="no_internet_connection">No Internet Connection...</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="Dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="breakfast">Breakfast</string>
    <string name="sauce">Sauce</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="soup">Soup</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="favorite_recipes">Favorite</string>
    <string name="no_favorites_recipes">No Favorites Recipes</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="food_trivia">Food Trivia</string>
    <string name="trivia">Trivia</string>
    <string name="error">Error</string>
    <string name="share">Share</string>
</resources>