<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.fragments.recipes.RecipesBottomSheetFragment">


        <TextView
            android:id="@+id/mealTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/meal_type"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/darkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scrollViewMealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealTypeTextView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/mealTypeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/mainCourseChip">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mainCourseChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sideDishChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/dessertChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dessert" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/appetizerChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/saladChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/breakfastChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/soupChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fingerfoodChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fingerfood" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/snackChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/drinkChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/dietTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/diet_type"
            android:textColor="@color/darkGray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewMealType" />


        <HorizontalScrollView
            android:id="@+id/scrollViewDietType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietTypeTextView"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/dietTypeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/ketogenicChip">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ketogenicChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/glutenFreeChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/vegetarianChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/veganChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/pescetarian"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/paleoChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/primalChip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/whole30Chip"
                        style="@style/CustomChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole30" />


                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewDietType" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>